--- a/test/fixtures/date_ranges.yml
+++ b/test/fixtures/date_ranges.yml
@@ -1,65 +1,65 @@
 sy07:
   type: SchoolYear
   name: 2007-2008
-  begin_date: 2007/08/01
-  end_date: 2008/06/27
+  begin_date: 2007-08-01
+  end_date: 2008-06-27
 
 sy08:
   type: SchoolYear
   name: 2008-2009
-  begin_date: 2008/08/01
-  end_date: 2009/06/27
+  begin_date: 2008-08-01
+  end_date: 2009-06-27
 
 sy09:
   type: SchoolYear
   name: 2009-2010
-  begin_date: 2008/08/01
-  end_date: 2010/06/27
+  begin_date: 2008-08-01
+  end_date: 2010-06-27
 
 t1-08:
   type: Term
   name: GP1-08
-  begin_date: 2008/08/01
-  end_date: 2008/11/17
+  begin_date: 2008-08-01
+  end_date: 2008-11-17
   school_year_id: 594005756
   active: true
 	
 t2-08:
   type: Term
   name: GP2-08
-  begin_date: 2008/11/17
-  end_date: 2009/03/28
+  begin_date: 2008-11-17
+  end_date: 2009-03-28
   school_year_id: 594005756
   active: true
 
 t3-08:
   type: Term
   name: GP3-08
-  begin_date: 2009/03/28
-  end_date: 2009/06/28
+  begin_date: 2009-03-28
+  end_date: 2009-06-28
   school_year_id: 594005756
   active: false
   
 t1-09:
   type: Term
   name: GP1-09
-  begin_date: 2009/08/01
-  end_date: 2009/11/17
+  begin_date: 2009-08-01
+  end_date: 2009-11-17
   school_year_id: 594005757
   active: true
 	
 t2-09:
   type: Term
   name: GP2-09
-  begin_date: 2009/11/17
-  end_date: 2010/03/28
+  begin_date: 2009-11-17
+  end_date: 2010-03-28
   school_year_id: 594005757
   active: true
 
 t3-10:
   type: Term
   name: GP3-10
-  begin_date: 2010/03/28
-  end_date: 2010/06/28
+  begin_date: 2010-03-28
+  end_date: 2010-06-28
   school_year_id: 594005757
   active: false
