Completed the DB schema changes  * I still don't like having two "evaluations" tables.  I think they could be combined but I don't have the time right now.  * Everthing seems to build and migrate, however the tests don't pass yet and there is probably quite a bit of work to do on the supporting_skill_evaluations.

--- a/test/fixtures/supporting_skill_codes.yml
+++ b/test/fixtures/supporting_skill_codes.yml
@@ -1,21 +1,19 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-one:
+exceptional:
   supporting_skill_id: 1
   code: +
   description: Exceptional performance
 
-two:
+satisfactory:
   supporting_skill_id: 1
   code: ✓
   description: Satisfactory performance
 
-three:
+ni:
   supporting_skill_id: 2
   code: N
   description: Need for improvement
 
-four:
+na:
   supporting_skill_id: 3
   code: NA
   description: Not applicable
