More small tweaks  * fixture data for Grading Periods was messed up and causing a ripple effect downstream.  :(  * things are working much more smoothly now.  Just have to do some more testing...

--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -3,6 +3,11 @@ english-08:
   teacher: teachera
   grading_scale: s
 
+english-09:
+  name: English
+  teacher: teachera
+  grading_scale: s
+
 math-08:
   name: Math
   teacher: teachera
