--- a/test/fixtures/course_terms.yml
+++ b/test/fixtures/course_terms.yml
@@ -22,18 +22,6 @@ english-t3-09:
   term: t3-09
   course: english-09
 
-spelling-t1-08:
-  term: t1-08
-  course: spelling-08
-
-spelling-t2-08:
-  term: t2-08
-  course: spelling-08
-
-spelling-t3-08:
-  term: t3-08
-  course: spelling-08
-
 math-t1-08:
   term: t1-08
   course: math-08
@@ -45,3 +33,27 @@ math-t2-08:
 math-t3-08:
   term: t3-08
   course: math-08
+
+music-t1-09:
+  term: t1-09
+  course: music-09
+
+music-t2-09:
+  term: t2-09
+  course: music-09
+
+music-t3-09:
+  term: t3-09
+  course: music-09
+
+spelling-t1-08:
+  term: t1-08
+  course: spelling-08
+
+spelling-t2-08:
+  term: t2-08
+  course: spelling-08
+
+spelling-t3-08:
+  term: t3-08
+  course: spelling-08
