--- a/test/fixtures/assignments.yml
+++ b/test/fixtures/assignments.yml
@@ -3,18 +3,21 @@ fractions_quiz:
   course_term: math-t1-08
   possible_points: 10
   assignment_category: quiz
+  due_date: <%= (Time.now + rand(10).days).strftime("%Y-%m-%d %I:%M:%S") %>
   
 division_test:
   name: Test on Division
   course_term: math-t1-08
   possible_points: 75
   assignment_category: test
+  due_date: <%= (Time.now + rand(10).days).strftime("%Y-%m-%d %I:%M:%S") %>
 
 spelling_test:
   name: Spelling Test
   course_term: english-t1-08
   possible_points: 10
   assignment_category: test
+  due_date: <%= (Time.now + rand(10).days).strftime("%Y-%m-%d %I:%M:%S") %>
   
 long_term_project:
   name: Long Term Project
@@ -22,3 +25,4 @@ long_term_project:
   possible_points: 50
   due_date: 2008-12-31
   assignment_category: hw
+  due_date: <%= (Time.now + rand(10).days).strftime("%Y-%m-%d %I:%M:%S") %>
